Fix text overflow

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -24,3 +24,7 @@ a.list-group-item:hover {
 .black {
   color: black;
 }
+
+.panel-body {
+  word-wrap: break-word;
+}
